Fixed alignment on All Sessions

--- a/src/App.scss
+++ b/src/App.scss
@@ -62,7 +62,7 @@ body {
 .group-dropdown {
 	text-transform: none;
 	width: 100%;
-	margin-top: 1rem;
+	margin: 0 0 1.5rem 0;
 	height: 3rem;
 	padding-top: 0.25rem;
 	font-size: 1.25rem;
